# EDK_AI

./: .gitignore  COMMANDS.md  MANUAL.md  README.md  index.html  install-live.sh  install.py  install.sh  pyproject.toml  requirements.txt
edkai/: __main__.py  app.py  main.py
edkai/agent/: __init__.py  context.py  context_v2.py  diff_engine.py  nl_router.py  orchestrator.py  parallel.py  repl.py  summarizer.py  tools.py
edkai/ai/: __init__.py  client.py  code_actions.py  exceptions.py  ghost.py  inline_generator.py  nl_commands.py  prompts.py  refactor.py  terminal_copilot.py  test_generator.py
edkai/ai/providers/: __init__.py  base.py  cloudflare.py  fallback.py  gemini.py  github_models.py  mistral.py  ollama.py  openai_compat.py  openrouter.py  siliconflow.py
edkai/ai/skills/: __init__.py  manager.py
edkai/ai/skills/code_review/: SKILL.md  __init__.py  prompts.py
edkai/ai/skills/doc_gen/: SKILL.md  __init__.py  prompts.py
edkai/ai/skills/explain/: SKILL.md  __init__.py  prompts.py
edkai/ai/skills/ghost_writer/: SKILL.md  __init__.py  prompts.py
edkai/ai/skills/git_ops/: SKILL.md  __init__.py  (+1 more)
edkai/core/: __init__.py  auto_fix.py  config.py  fuzzy_search.py  git_manager.py  macros.py  persistence.py  project.py  runner.py  snippets.py  symbols.py  templates.py  test_runner.py  vector_store.py
edkai/syntax/: highlighter.py
edkai/widgets/: __init__.py  agent_panel.py  ai_panel.py  ai_terminal.py  editor.py  file_tree.py  ghost_overlay.py  git_panel.py  nl_palette.py  search_panel.py  snippet_bar.py  status_bar.py  terminal.py  test_panel.py
(+15 files in other folders)
