[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EDK_AI"
version = "0.6.0"
description = "EDK_AI v5 — Universal AI Code Agent. TUI IDE + Agent mode with free AI models."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "EDK_AI Contributors"}]
keywords = ["terminal", "ide", "tui", "editor", "ai", "agent", "code", "copilot", "free-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Editors",
]
dependencies = [
    "textual>=0.47.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/r7b9ktps55-rgb/tstudio"
Repository = "https://github.com/r7b9ktps55-rgb/tstudio"

[project.scripts]
edkai = "edkai.main:main"

[tool.setuptools.packages.find]
include = ["edkai*"]
